--- a/package.json
+++ b/package.json
@@ -28,6 +28,11 @@
   },
   "homepage": "https://github.com/a1029563229/micro-front-template#readme",
   "devDependencies": {
-    "npm-run-all": "^4.1.5"
+    "npm-run-all": "^4.1.5",
+    "sass-loader": "^9.0.0"
+  },
+  "dependencies": {
+    "js-cookie": "^3.0.1",
+    "sass": "1.39.2"
   }
 }
